--- a/public/posts/cdn-static-content-delivery.mdx
+++ b/public/posts/cdn-static-content-delivery.mdx
@@ -74,7 +74,8 @@ In development, the SPA downloads an *spa.config.json* file, whose content would
 
 ```json
 {
-    "bffBaseUrl": "https://bff.authsamples-dev.com"
+    "bffBaseUrl": "https://bff.authsamples-dev.com",
+    "delegationIdClaimName": "origin_jti"
 }
 ```
 
