--- a/public/posts/final-desktop-sample-overview.mdx
+++ b/public/posts/final-desktop-sample-overview.mdx
@@ -76,7 +76,8 @@ The final desktop app's configuration no longer uses HTTP ports, and now uses lo
         "postLogoutRedirectUri": "https://www.authsamples.com/apps/finaldesktopapp/postlogout.html",
         "scope":                 "openid profile https://api.authsamples.com/investments",
         "customLogoutEndpoint":  "https://login.authsamples.com/logout",
-        "privateSchemeName":     "x-authsamples-desktopapp"
+        "privateSchemeName":     "x-authsamples-desktopapp",
+        "delegationIdClaimName": "origin_jti",
     }
 }
 ```
@@ -224,7 +225,8 @@ To connect to local APIs, update the *apiBaseUrl* value in the desktop.config.js
         "postLogoutRedirectUri": "https://www.authsamples.com/apps/finaldesktopapp/postlogout.html",
         "scope":                 "openid profile https://api.authsamples.com/investments",
         "customLogoutEndpoint":  "https://login.authsamples.com/logout",
-        "privateSchemeName":     "x-authsamples-desktopapp"
+        "privateSchemeName":     "x-authsamples-desktopapp",
+        "delegationIdClaimName": "origin_jti",
     }
 }
 ```
