--- a/public/posts/ios-code-sample-infrastructure.mdx
+++ b/public/posts/ios-code-sample-infrastructure.mdx
@@ -113,7 +113,8 @@ In the iOS code sample you can update the *mobile_config.json* file with the fol
     "scope":                  "openid profile https://api.authsamples.com/investments",
     "userInfoEndpoint":       "https://login.authsamples.com/oauth2/userInfo",
     "customLogoutEndpoint":   "https://login.authsamples.com/logout",
-    "deepLinkBaseUrl":        "https://mobile.authsamples.com"
+    "deepLinkBaseUrl":        "https://mobile.authsamples.com",
+    "delegationIdClaimName":  "origin_jti",
   }
 }
 ```
