--- a/public/posts/java-spring-boot-api-overview.mdx
+++ b/public/posts/java-spring-boot-api-overview.mdx
@@ -194,7 +194,7 @@ The other main objective of the API code sample is JSON logging of API requests.
   "method": "GET",
   "path": "/investments/companies/2/transactions",
   "resourceId": "2",
-  "clientName": "LoadTest",
+  "clientId": "LoadTest",
   "userId": "a6b404b1-98af-41a2-8e7f-e4061dc0bf86",
   "statusCode": 200,
   "millisecondsTaken": 7,
@@ -211,7 +211,7 @@ The other main objective of the API code sample is JSON logging of API requests.
   "method": "GET",
   "path": "/investments/companies/2/transactions",
   "resourceId": "2",
-  "clientName": "LoadTest",
+  "clientId": "LoadTest",
   "userId": "a6b404b1-98af-41a2-8e7f-e4061dc0bf86",
   "statusCode": 200,
   "millisecondsTaken": 7,
