--- a/public/posts/net-core-api-coding-model.mdx
+++ b/public/posts/net-core-api-coding-model.mdx
@@ -224,7 +224,7 @@ The art of good error handling is to design good error objects that contain usef
   "method": "GET",
   "path": "/investments/companies/4/transactions",
   "resourceId": "4",
-  "clientName": "FinalSPA",
+  "clientId": "FinalSPA",
   "statusCode": 200,
   "errorCode": "unauthorized",
   "millisecondsTaken": 12,
