--- a/public/posts/serverless-api-overview.mdx
+++ b/public/posts/serverless-api-overview.mdx
@@ -198,7 +198,7 @@ The other main objective of the API code sample is JSON logging of API requests,
   "hostName": "UBUNTU",
   "method": "GET",
   "path": "/investments/userinfo",
-  "clientName": "FinalSPA",
+  "clientId": "FinalSPA",
   "userId": "a6b404b1-98af-41a2-8e7f-e4061dc0bf86",
   "statusCode": 200,
   "millisecondsTaken": 372,
