--- a/public/posts/android-infrastructure-setup.mdx
+++ b/public/posts/android-infrastructure-setup.mdx
@@ -153,7 +153,8 @@ In the Android code sample you can update the *mobile_config.json* file with the
     "scope":                  "openid profile https://api.authsamples.com/investments",
     "userInfoEndpoint":       "https://login.authsamples.com/oauth2/userInfo",
     "customLogoutEndpoint":   "https://login.authsamples.com/logout",
-    "deepLinkBaseUrl":        "https://mobile.authsamples.com"
+    "deepLinkBaseUrl":        "https://mobile.authsamples.com",
+    "delegationIdClaimName":  "origin_jti",
   }
 }
 ```
