--- a/public/posts/error-handling-and-supportability.mdx
+++ b/public/posts/error-handling-and-supportability.mdx
@@ -45,7 +45,7 @@ The API records error details in its request logs along with some context in cas
   "method": "GET",
   "path": "/investments/companies/4/transactions",
   "resourceId": "4",
-  "clientName": "FinalSPA",
+  "clientId": "FinalSPA",
   "statusCode": 401,
   "errorCode": "invalid_token",
   "millisecondsTaken": 4,
@@ -257,7 +257,7 @@ For 5xx errors, this blog's APIs record error details in request logs in the fol
   "hostName": "UBUNTU",
   "method": "GET",
   "path": "/investments/companies",
-  "clientName": "FinalSPA",
+  "clientId": "FinalSPA",
   "userId": "a6b404b1-98af-41a2-8e7f-e4061dc0bf86",
   "statusCode": 500,
   "errorCode": "exception_simulation",
@@ -341,7 +341,7 @@ export class CustomHeaderMiddleware {
 
     public processHeaders(request: Request, response: Response, next: NextFunction): void {
 
-        const apiToBreak = request.header('authsamples-test-exception');
+        const apiToBreak = request.header('api-exception-simulation');
         if (apiToBreak) {
             if (apiToBreak.toLowerCase() === this.apiName.toLowerCase()) {
 
@@ -361,7 +361,7 @@ export class CustomHeaderMiddleware {
 Not all errors are so deterministic and occasionally software has deeper bugs that occur intermittently. The best way to deal with these is to assign them an error code, then measure them. The <a href='api-technical-support-analysis.mdx'>Technical Support Analysis</a> post explains how structured logs can enable a report with a breakdown of API errors by type and frequency. Once you have visibility you can plan actions for any unexpected error occurrences, such as by adding extra details to logs.
 
 ```markdown
-clientName|    apiName    |    operationName     |  statusCode   |     errorCode      |   frequency   
+clientId             |    apiName    |    operationName     |  statusCode   |     errorCode      |   frequency   
 ---------------------+---------------+----------------------+---------------+--------------------+---------------
 FinalSPA             |FinalApi      |getCompanyTransactions|404            |company_not_found   |6              
 FinalSPA             |FinalApi      |getCompanyList        |500            |exception_simulation|2              
