--- a/public/posts/how-to-run-the-ios-code-sample.mdx
+++ b/public/posts/how-to-run-the-ios-code-sample.mdx
@@ -79,7 +79,8 @@ When the app runs it uses API and OAuth settings from an embedded JSON configura
     "scope":                  "openid profile https://api.authsamples.com/investments",
     "userInfoEndpoint":       "https://login.authsamples.com/oauth2/userInfo",
     "customLogoutEndpoint":   "https://login.authsamples.com/logout",
-    "deepLinkBaseUrl":        "https://mobile.authsamples.com"
+    "deepLinkBaseUrl":        "https://mobile.authsamples.com",
+    "delegationIdClaimName":  "origin_jti",
   }
 }
 ```
