--- a/public/posts/ios-code-sample-coding-key-points.mdx
+++ b/public/posts/ios-code-sample-coding-key-points.mdx
@@ -419,7 +419,8 @@ At runtime, the app reads OAuth details from its configuration file and provides
     "scope":                  "openid profile https://api.authsamples.com/investments",
     "userInfoEndpoint":       "https://login.authsamples.com/oauth2/userInfo",
     "customLogoutEndpoint":   "https://login.authsamples.com/logout",
-    "deepLinkBaseUrl":        "https://mobile.authsamples.com"
+    "deepLinkBaseUrl":        "https://mobile.authsamples.com",
+    "delegationIdClaimName":  "origin_jti",
   }
 }
 ```
