--- a/public/posts/serverless-api-deployment.mdx
+++ b/public/posts/serverless-api-deployment.mdx
@@ -75,6 +75,7 @@ The Serverless API uses the same JSON based approach to configuration as earlier
         "algorithm":                    "RS256",
         "scope":                        "https://api.authsamples.com/investments",
         "jwksEndpoint":                 "https://cognito-idp.eu-west-2.amazonaws.com/eu-west-2_CuhLeqiE9/.well-known/jwks.json",
+        "delegationIdClaimName":        "origin_jti",
         "claimsCacheTimeToLiveMinutes": 15
     }
 }
